// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChannelInput renders component input Disable  1`] = `
<WithStyles(ForwardRef(Grid))
  className="root-mock"
  container={true}
  direction="column"
  justify="center"
>
  <ForwardRef(Fade)
    in={true}
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      className="backdrop-mock"
      container={true}
      direction="column"
      justify="center"
    >
      <WarningIcon
        className="warningIcon-mock"
      />
      <WithStyles(ForwardRef(Typography))
        align="center"
        variant="caption"
      >
        Sending messages is locked due to insufficient funds - this may be resolved by topping up your account
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </ForwardRef(Fade)>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="inputsDiv-mock"
    container={true}
    direction="row"
    justify="center"
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(TextField))
        InputProps={
          Object {
            "classes": Object {
              "focused": "cssFocused-mock",
              "notchedOutline": "notchedOutline-mock",
              "root": "textfield-mock",
            },
            "endAdornment": <ForwardRef(WithStyles)
              position="end"
            >
              <Connect(Component)
                disabled={true}
              />
            </ForwardRef(WithStyles)>,
          }
        }
        autoFocus={true}
        className="textField-mock"
        fullWidth={true}
        id="channel-input"
        inputProps={
          Object {
            "className": "input-mock",
          }
        }
        inputRef={
          Object {
            "current": null,
          }
        }
        margin="none"
        multiline={true}
        onChange={[MockFunction]}
        onKeyPress={[Function]}
        placeholder="Send a message"
        rowsMax={5}
        value="this is just a test message"
        variant="outlined"
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ChannelInput renders component input Locked  1`] = `
<WithStyles(ForwardRef(Grid))
  className="root-mock"
  container={true}
  direction="column"
  justify="center"
>
  <ForwardRef(Fade)
    in={true}
  >
    <WithStyles(ForwardRef(Grid))
      alignItems="center"
      className="backdrop-mock"
      container={true}
      direction="column"
      justify="center"
    >
      <WarningIcon
        className="warningIcon-mock"
      />
      <WithStyles(ForwardRef(Typography))
        align="center"
        variant="caption"
      >
        All of your funds are locked - please wait for network confirmation or deposit more ZEC to your account
      </WithStyles(ForwardRef(Typography))>
    </WithStyles(ForwardRef(Grid))>
  </ForwardRef(Fade)>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="inputsDiv-mock"
    container={true}
    direction="row"
    justify="center"
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(TextField))
        InputProps={
          Object {
            "classes": Object {
              "focused": "cssFocused-mock",
              "notchedOutline": "notchedOutline-mock",
              "root": "textfield-mock",
            },
            "endAdornment": <ForwardRef(WithStyles)
              position="end"
            >
              <Connect(Component)
                disabled={true}
              />
            </ForwardRef(WithStyles)>,
          }
        }
        autoFocus={true}
        className="textField-mock"
        fullWidth={true}
        id="channel-input"
        inputProps={
          Object {
            "className": "input-mock",
          }
        }
        inputRef={
          Object {
            "current": null,
          }
        }
        margin="none"
        multiline={true}
        onChange={[MockFunction]}
        onKeyPress={[Function]}
        placeholder="Send a message"
        rowsMax={5}
        value="this is just a test message"
        variant="outlined"
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;

exports[`ChannelInput renders component input available  1`] = `
<WithStyles(ForwardRef(Grid))
  className="root-mock"
  container={true}
  direction="column"
  justify="center"
>
  <WithStyles(ForwardRef(Grid))
    alignItems="center"
    className="inputsDiv-mock"
    container={true}
    direction="row"
    justify="center"
    spacing={0}
  >
    <WithStyles(ForwardRef(Grid))
      item={true}
      xs={true}
    >
      <WithStyles(ForwardRef(TextField))
        InputProps={
          Object {
            "classes": Object {
              "focused": "cssFocused-mock",
              "notchedOutline": "notchedOutline-mock",
              "root": "textfield-mock",
            },
            "endAdornment": <ForwardRef(WithStyles)
              position="end"
            >
              <Connect(Component)
                disabled={false}
              />
            </ForwardRef(WithStyles)>,
          }
        }
        autoFocus={true}
        className="textField-mock"
        fullWidth={true}
        id="channel-input"
        inputProps={
          Object {
            "className": "input-mock",
          }
        }
        inputRef={
          Object {
            "current": null,
          }
        }
        margin="none"
        multiline={true}
        onChange={[MockFunction]}
        onKeyPress={[Function]}
        placeholder="Send a message"
        rowsMax={5}
        value="this is just a test message"
        variant="outlined"
      />
    </WithStyles(ForwardRef(Grid))>
  </WithStyles(ForwardRef(Grid))>
</WithStyles(ForwardRef(Grid))>
`;
